--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -93,9 +93,9 @@
     subtitle: "PhD Student | CS",
     modifier: "Guevara",
     type: "Graduate",
-    bio: "n/a",
-    email: "n/a",
-    img: "/image/raw/bioinfo/profile/profile_pic.jpeg",
+    bio: "David is a CS PhD student from Colombia. He worked full-time as a full-stack software developer for 6 years while finishing his bachelor's degree in Software and Computer Engineering and got a MSc. degree in Computational Biology. His interests are software development, database administration, machine learning, and deep learning. He likes soccer, videogames, and playing music.",
+    email: "davguev@aggiemail.usu.edu",
+    img: "/image/raw/bioinfo/profile/david.jpg?h=600&w=500",
     social: []
   }
 %}
