Add editorial links

--- a/src/views/pages/publications/editorials/_data.njk
+++ b/src/views/pages/publications/editorials/_data.njk
@@ -2,22 +2,26 @@
   {
     authors: "Wren, J.D., Toby, I., Hong, H., Nanduri, B., <b>Kaundal, R.</b> Dozmorov, M.G. and Thakkar, S.",
     content: "Proceedings of the 2016 MidSouth Computational Biology and Bioinformatics Society (MCBIOS) Conference. <e>BMC Bioinformatics</e> <b>17</b>(S13): 356.",
-    year: "2016"
+    year: "2016",
+    link: "https://doi.org/10.1186/s12859-016-1213-4"
   },
   {
     authors: "Wren, J.D., Dozmorov, M.G., Burian, D., Perkins, A., Zhang, C., Hoyt, P. and <b>Kaundal, R.</b>",
     content: "Proceedings of the 2014 MidSouth Computational Biology and Bioinformatics Society (MCBIOS) Conference. <e>BMC Bioinformatics</e> <b>15</b>(S11): I1.",
-    year: "2014"
+    year: "2014",
+    link: "https://doi.org/10.1186/1471-2105-15-S11-I1"
   },
   {
     authors: "Wren, J.D., Dozmorov, M.G., Burian, D., <b>Kaundal, R.</b>, Perkins, A., Perkins, E., Kupfer, D.M. and Springer, G.K.",
     content: "Proceedings of the 2013 MidSouth Computational Biology and Bioinformatics Society (MCBIOS) Conference. <e>BMC Bioinformatics</e> <b>14</b>(S14): S1.",
-    year: "2013"
+    year: "2013",
+    link: "https://doi.org/10.1186/1471-2105-14-S14-S1"
   },
   {
     authors: "Wren, J.D., Dozmorov, M.G., Burian, D., <b>Kaundal, R.</b>, Bridges, S. and Kupfer, D.M.",
     content: "Proceedings of the 2012 MidSouth Computational Biology and Bioinformatics Society (MCBIOS) Conference. <e>BMC Bioinformatics</e> <b>13</b>(S15): S1.",
-    year: "2012"
+    year: "2012",
+    link: "https://doi.org/10.1186/1471-2105-13-S15-S1"
   }
 ]
 %}
