--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -56,6 +56,7 @@
   {{ scripts() }}
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="assets/js/kbl/uptime.js"></script>
+  <script src="assets/js/kbl/devtools/hucopia.js"></script>
 </body>
 
 </html>
