Add Pub Text component beta

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -6,7 +6,7 @@
   @return mix($color, black, $percentage);
 }
 
-$color-primary: #b4132a;
+$color-primary: #b01241;
 $color-secondary: #3b4961;
 
 :root {
