--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -10,3 +10,4 @@
 @import './components/mobile-navbar';
 @import './components/publication';
 @import './components/event-modal';
+@import './components/pub-legend';
