--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -29,7 +29,7 @@
 {% set rslPredP = {
     img: "/assets/img/tools/rslpred.PNG",
     title: "RSLpredP",
-    link: "http://crdd.osdd.net/raghava/rslpred/"
+    link: "https://webs.iiitd.edu.in/raghava/rslpred/"
   }
 %}
 
@@ -78,7 +78,7 @@
 {% set rbPred = {
     img: "/assets/img/tools/rbpred.PNG",
     title: "RBPred",
-    link: "http://crdd.osdd.net/raghava/rbpred/"
+    link: "https://webs.iiitd.edu.in/raghava/rbpred/"
   }
 %}
 
