--- a/src/views/components/pub-legend.njk
+++ b/src/views/components/pub-legend.njk
@@ -1,5 +1,5 @@
 {% macro pubLegend() %}
-  <div>
+  <div class="mb-2">
     <span class="fa-stack fa-2x pub-legend-container" id="dollar">
       <i class="fas fa-square fa-stack-2x"></i>
       <i class="fas fa-dollar-sign fa-stack-1x pub-legend-icon"></i>
