Add alfaNET metadata

--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -117,6 +117,13 @@
   }
 %}
 
+{% set alfaNet = {
+    img: "",
+    title: "alfaNET",
+    link: "http://bioinfo.usu.edu/alfaNET/"
+  }
+%}
+
 {% set hpi = [predhpi, apinet, deepHPI, huco] %}
 {% set clpt = [plantmSubp, atSubP, rslPredP, plPred] %}
 {% set dbs = [greeningDB, citSATdb, legumeSSRdb, ranchSAT] %}
