--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -119,7 +119,7 @@
 
 {% set alfaNet = {
     img: "",
-    title: "alfaNET",
+    title: "alfaNET - Coming Soon",
     link: "http://bioinfo.usu.edu/alfaNET/"
   }
 %}
