--- a/src/views/components/pub-legend.njk
+++ b/src/views/components/pub-legend.njk
@@ -12,6 +12,14 @@
       <i class="fas fa-square fa-stack-2x"></i>
       <i class="fas fa-angle-up fa-stack-1x pub-legend-icon"></i>
     </span>
+    <span class="fa-stack fa-2x pub-legend-container"  id="underline">
+      <i class="fas fa-square fa-stack-2x"></i>
+      <i class="fas fa-underline fa-stack-1x pub-legend-icon"></i>
+    </span>
+    <span class="fa-stack fa-2x pub-legend-container"  id="italic">
+      <i class="fas fa-square fa-stack-2x"></i>
+      <i class="fas fa-italic fa-stack-1x pub-legend-icon"></i>
+    </span>
   </div>
   <div class="pub-text px-2">
 
