Edit page works on publications

--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -33,11 +33,13 @@
         {% include './subpages/pubs.njk' %}
       </div>
 
-      <div class="col-9" id="conf-column">
+      <div class="col-9 d-none" id="conf-column">
         {% include './subpages/conf.njk' %}
       </div>
 
-
+      <div class="col-9" id="edit-column">
+        {% include './subpages/edit.njk' %}
+      </div>
     </section>
   </article>
 
