--- a/src/views/pages/publications/subpages/edit.njk
+++ b/src/views/pages/publications/subpages/edit.njk
@@ -2,7 +2,7 @@
 {% from "./_edit-data.njk" import editorials %}
 
 <article class="container">
-  <section class="pt-2 pb-4">
+  <section class="pb-4">
     <div class="kbl-header-bar py-2 text-center mb-4">
       <h4 class="kbl-heading my-auto">Editorials</h4>
     </div>
