--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -22,23 +22,39 @@
 
     </div>
 
-    <section class="row px-5">
+    <div class="row justify-content-center my-4">
+      <div class="col-6 text-center">
+
+      </div>
+    </div>
+
+    <section class="row px-5 overflow-hidden">
       <div class="col-3">
         {% from "components/pub-legend.njk" import pubLegend %}
 
         {{ pubLegend() }}
       </div>
 
-      <div class="col-9 d-none" id="pub-column">
-        {% include './subpages/pubs.njk' %}
-      </div>
+      <div class="col-9 overflow-hidden">
+        <section class="kbl-tab-selector text-center mb-5" id="pub-selector">
+          <span class="tab-select-option" id="pub">Publications</span>
+          <span class="tab-select-option" id="conf">Conferences</span>
+          <span class="tab-select-option" id="edit">Editorials</span>
+        </section>
 
-      <div class="col-9 d-none" id="conf-column">
-        {% include './subpages/conf.njk' %}
-      </div>
+        <div class="position-relative">
+          <div id="pub-column" class="sub-column off">
+            {% include './subpages/pubs.njk' %}
+          </div>
 
-      <div class="col-9" id="edit-column">
-        {% include './subpages/edit.njk' %}
+          <div id="conf-column" class="sub-column off">
+            {% include './subpages/conf.njk' %}
+          </div>
+
+          <div id="edit-column" class="sub-column off">
+            {% include './subpages/edit.njk' %}
+          </div>
+        </div>
       </div>
     </section>
   </article>
