--- a/src/views/pages/publications/subpages/conf.njk
+++ b/src/views/pages/publications/subpages/conf.njk
@@ -57,7 +57,7 @@
 
 <article class="container">
 
-  <section class="row justify-content-center py-5">
+  <section class="row justify-content-center">
     {{ confSelector("2020-2021") }}
     {{ confSelector("2017-2019") }}
     {{ confSelector("2014-2016") }}
@@ -71,7 +71,7 @@
   {% for confGroup in conferences %}
     <div id="conf-{{ confGroup.range.split('-')[0] }}" class="conf-group d-none">
       {% for confSet in confGroup.confs %}
-        <section class="row mt-5 mb-2">
+        <section class="row mt-4 mb-2">
           <div class="col-12 text-center">
             <div class="kbl-header-bar py-2">
               <h1 class="kbl-heading">{{ confSet.year }}</h1>
