--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,8 +37,10 @@ body {
   }
 }
 
-.bottom-section {
-  margin-bottom: var(--mobile-nav-height);
+@media only screen and (max-width: 991px) {
+  .bottom-section {
+    margin-bottom: var(--mobile-nav-height);
+  }
 }
 
 .kbl-top {
