--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -45,6 +45,7 @@ $color-secondary: #3b4961;
   --color-text-hard: #212121;
   --color-text-main: #2a2a2a;
   --color-text-soft: #606060;
+  --color-text-ghost: #a2a2a2;
 
   --color-btn-gray: #c4c4c4;
 }
