Change navbar to remove pub options

--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -20,15 +20,7 @@
   }
 %}
 
-{% set publications = {
-  name: "Publications",
-  options: [
-    {name: "Conferences and Talks", link: "/publications/conferences"},
-    {name: "Editorials", link: "/publications/editorials"}
-  ],
-  link: "publications"
-  }
-%}
+{% set publications = { name: "Publications", options: [], link: "/publications" } %}
 
 {% set tools = {
   name: "Tools",
