--- a/src/scss/kbl/_selectors.scss
+++ b/src/scss/kbl/_selectors.scss
@@ -13,9 +13,9 @@
     outline: none;
   }
 
-  &:hover {
-    background: var(--color-primary-light);
-    color: #fff;
+  &:hover:not(.active) {
+    background: var(--color-primary-light)!important;
+    color: #fff!important;
   }
 
   &.active {
