--- a/src/views/pages/publications/_functions.njk
+++ b/src/views/pages/publications/_functions.njk
@@ -6,13 +6,13 @@
 
 {% macro pubSelector(btnString) %}
   <div class="col-auto">
-    <button class="kbl-date-selector pub" id="{{ btnString.split('-')[0] }}">{{ btnString }}</button>
+    <button class="kbl-date-selector pub" id="pub-btn-{{ btnString.split('-')[0] }}">{{ btnString }}</button>
   </div>
 {% endmacro %}
 
 {% macro confSelector(btnString) %}
   <div class="col-auto">
-    <button class="kbl-date-selector conf" id="{{ btnString.split('-')[0] }}">{{ btnString }}</button>
+    <button class="kbl-date-selector conf" id="conf-btn-{{ btnString.split('-')[0] }}">{{ btnString }}</button>
   </div>
 {% endmacro %}
 
